cmake_minimum_required(VERSION 3.2)

PROJECT(dmtoml)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(DMTOML_VERSION_MAJOR "1")
SET(DMTOML_VERSION_MINOR "0")
SET(DMTOML_VERSION_PATCH "1")
SET(DMTOML_VERSION "${DMTOML_VERSION_MAJOR}.${DMTOML_VERSION_MINOR}.${DMTOML_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMTOML_VERSION}")

OPTION(USE_DMTOML "use dmtoml" OFF)

ExeImport("examples" "")

#ADD_CUSTOM_COMMAND(
#TARGET dmtomltest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:dmtomltest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS dmtoml
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(DMTOML_LIBS "dmtoml")
#MARK_AS_ADVANCED(${DMTOML_LIBS})